Fixed purge css Fixed text contrast

--- a/assets/scss/components.scss
+++ b/assets/scss/components.scss
@@ -44,7 +44,7 @@
 }
 
 .nice-link {
-  @apply text-bid-pink underline;
+  @apply text-bid-bright-pink underline;
 
   &:hover {
     @apply lighten-10;
